[package]
name = "smolprog"
version = "0.1.1"
edition = "2021"

[features]
battery = []
cpu = []
date = []
memory = []
network = []
sessions = []
volume = []

default = ["battery", "cpu", "date", "memory", "network", "sessions", "volume"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
